atualizacao de script

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
     <head>
         <title>Login - PBSC</title>
         <%- include('meta'); %>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet"  type="text/css" href="../styles/login.css">
     </head>
     <body>
@@ -18,21 +19,21 @@
                     <ul class="list-group list-group-horizontal font-weight-bold">
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/google" class="text-danger text-decoration-none ico">
-                                <i class='fab fa-google-plus'  style="font-size: 32px"></i>
+                                <i class='fab'  style="font-size: 32px">&#xf1a0;</i>
                                 <br>
                                 Google+
                             </a>
                         </li>
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/linkedin" class="text-primary text-decoration-none ico">
-                                <i class='fab fa-linkedin' style="font-size: 32px"></i>
+                                <i class='fab' style="font-size: 32px">&#xf08c;</i>
                                 <br>
                                 LinkedIn
                             </a>
                         </li>
                         <li class="list-group-item list-group-item-action">
                             <a href="#!" onclick="alert('Login via Facebook desabilitado temporariamente')" class="text-dark text-decoration-none ico">
-                                <i class='fab fa-facebook align-middle' style="font-size: 32px"></i>
+                                <i class='fab' style="font-size: 32px">&#xf082;</i>
                                 <br>
                                 Facebook
                             </a>
