--- a/views/RunMenu.ejs
+++ b/views/RunMenu.ejs
@@ -1,35 +1,53 @@
-<div class="grid mx-3">
-    <div class="row">
-        <div class="col bg-dark text-white h5 p-2 rounded">Corrida</div>
-    </div>
-    <div class="row text-center">
-        <div class="col">
-            <a href="/run/mapa" class="link"> 
-                <img src="../img/map1.png" class="my-2 icoHome">
-                <br>
-               <span class="legico">Gravar <br>(Ao Vivo)</span>
-            </a>
+<div id="accordion">
+    <div class="card rounded-lg">
+      <div class="card-header rounded-lg bgBtnMain bgBtnMain2 h5 p-2" id="headingOne">
+        <button 
+          class="btn btn-link hoverBtnMain" 
+          data-toggle="collapse" 
+          data-target="#collapseTwo" 
+          aria-expanded="false" 
+          aria-controls="collapseTwo"
+        >
+          <i class='fas iconHome'>&#xf70c;</i>
+          <span class="txtHome">CORRIDA</span>
+        </button>
+      </div>
+  
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="card-body">
+            <div class="row text-center">
+                <div class="col">
+                    <a href="/run/mapa" class="link"> 
+                        <img src="../img/map1.png" class="my-2 icoHome">
+                        <br>
+                       <span class="legico">Gravar <br>(Ao Vivo)</span>
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="/run/nova" class="link">
+                        <img src="../img/newrun.jpg" class="my-2 icoHome">
+                        <br>
+                        <span class="legico">Gravar <br>(Manual)</span>
+                    </a>                
+                </div>
+                <div class="col">
+                    <a href="/run/lista" class="link">
+                        <img src="../img/tracks.jpg" class="my-2 icoHome">
+                        <br>
+                        <span class="legico">Ver Todas</span>
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="/run/best" class="link"> 
+                        <img src="../img/runrecord.jpg" class="my-2 icoHome">
+                        <br>
+                       <span class="legico">Melhores Tempos</span>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="col">
-            <a href="/run/nova" class="link">
-                <img src="../img/newrun.jpg" class="my-2 icoHome">
-                <br>
-                <span class="legico">Gravar <br>(Manual)</span>
-            </a>                
-        </div>
-        <div class="col">
-            <a href="/run/lista" class="link">
-                <img src="../img/tracks.jpg" class="my-2 icoHome">
-                <br>
-                <span class="legico">Ver Todas</span>
-            </a>
-        </div>
-        <div class="col">
-            <a href="/run/best" class="link"> 
-                <img src="../img/runrecord.jpg" class="my-2 icoHome">
-                <br>
-               <span class="legico">Melhores Tempos</span>
-            </a>
-        </div>
+      </div>
     </div>
 </div>
+
+
