--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,14 +8,23 @@
         <%- include('nav'); %>
         <br><br><br>
         <header class="container mt-5">
-            <h1>Olá <%= user.username %></h1>
+            <h1>
+                <img src="<%=user.thumbnail%>" width="75rem" height="75rem" class="rounded-circle nav-item">
+                Olá <%= user.username %>
+            </h1>
             <hr>
             <h2>Escolha uma das opções</h2>
         </header>
         <main class="container">
-            <%- include('PlanMenu'); %>
-            <br>
-            <%- include('RunMenu'); %>
+            <div class="row">
+                <div class="col">
+                    <%- include('PlanMenu'); %>
+                </div>
+                <div class="col">
+                    <%- include('RunMenu'); %>
+                </div>
+            </div>
+            
         </main>
     </body>
     <%- include('scripts'); %>
