--- a/styles/main.css
+++ b/styles/main.css
@@ -19,10 +19,11 @@ body{
 .botao{
     margin: 1em 0em;
     padding: 0.5em;
+    margin: 0.25em;
     height: 100%;
     display: inline-block;
     line-height: 100%;
-    font-size: 1em;
+    font-size: 1.25em;
     text-align: center;
     border-radius: 2em;
 }
