--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -19,5 +19,7 @@
     <script src="../src/expandirCard.js" type="text/javascript"></script>
     <script src="../src/colorirStatus.js" type="text/javascript"></script>
     <script src="../src/stringDataBr.js" type="text/javascript"></script>
+    <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
+    <script src="../src/ajustaDataBr.js"></script>
 </html>
 
