--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -21,6 +21,6 @@
     <script src="../src/emconstrucao.js" type="text/javascript"></script>
     <script src="../src/expandirCard.js" type="text/javascript"></script>
     <script src="../src/colorirStatus.js" type="text/javascript"></script>
-    <script src="../src/stringDataBr.js" type="text/javascript"></script>
+    <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
 </html>
 
