--- a/views/PlanMenu.ejs
+++ b/views/PlanMenu.ejs
@@ -60,6 +60,13 @@
                         <span>Ver Objetivos</span>
                     </a>
                 </div>
+                <div class="col">
+                    <a href="/map" class="link">
+                        <img src="../img/strategymap.png" class="icoHome py-3">
+                        <br>
+                        <span>Mapa Estratégico</span>
+                    </a>
+                </div>
             </div>
         </div>
       </div>
