--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -66,12 +66,9 @@
                     <a class="dropdown-item" href="/ativ">Atividades</a>
                     <a class="dropdown-item" href="/ini/">Iniciativas</a>
                     <a class="dropdown-item" href="/obj/">Objetivos</a>
+                    <a class="dropdown-item" href="/map">Mapa Estratégico (*Beta)</a>
                     <a class="dropdown-item" href="/run/lista">Lista de Corridas</a>
                     <a class="dropdown-item" href="/run/best">Recordes de Corridas</a>
-                    <a class="dropdown-item" href="/run/mapa">
-                        Mapa 
-                        <strong>(*Em Teste!!!)</strong>
-                    </a>
                 </div>
             </div>
             <div class="btn-group mr-2 mb-2 mt-2">
@@ -93,6 +90,10 @@
                     <a class="dropdown-item" href="/ini/nova">Iniciativas</a>
                     <a class="dropdown-item" href="/obj/nova">Objetivos</a>
                     <a class="dropdown-item" href="/run/nova">Corrida</a>
+                    <a class="dropdown-item" href="/run/mapa">
+                        Gravar Corrida Ao Vivo
+                        <strong>(*Em Teste!!!)</strong>
+                    </a>
                 </div>
             </div> 
         </div>
