criação do mapa estratégico

--- a/views/strategymap.ejs
+++ b/views/strategymap.ejs
@@ -13,11 +13,11 @@
             </h1>
             <hr>
         </header>
-        <main class="container">
-          <div class="row" id="corpoTabela">
+        <main class="container mx-auto">
+          <div class=" container row px-0 mx-0" id="corpoTabela">
             <div class="col-12 px-0 py-2" id="Fisica">
               <strong>Saúde Física</strong>
-              <div class="col-12 pl-2 pr-0" id="Fis"></div>
+              <div class="col-12 px-0" id="Fis"></div>
             </div>
             <div class="col-12 px-0 py-2" id="Emocional">
               <strong>Saúde Emocional</strong>
@@ -42,12 +42,6 @@
             <div class="col-12 px-0 py-2" id="Financeira">
               <strong>Saúde Financeira</strong>
               <div class="col-12 px-0" id="Fin"></div>
-            </div>
-            <div class="row" id="Outros">
-              <div class="col-3 font-weight-bold">Outros</div>
-              <div class="col-3" id="Obj"></div>
-              <div class="col-3" id="Ini"></div>
-              <div class="col-3" id="Ativ"></div>
             </div>
           </div>           
         </main>
