--- a/views/PlanMenu.ejs
+++ b/views/PlanMenu.ejs
@@ -6,7 +6,7 @@
             class="btn btn-link hoverBtnMain" 
             data-toggle="collapse" 
             data-target="#collapseOne" 
-            aria-expanded="false" 
+            aria-expanded="true" 
             aria-controls="collapseOne"
           >
             <i class='fas iconHome'>&#xf073;</i>
