--- a/views/RunMenu.ejs
+++ b/views/RunMenu.ejs
@@ -5,7 +5,7 @@
           class="btn btn-link hoverBtnMain" 
           data-toggle="collapse" 
           data-target="#collapseTwo" 
-          aria-expanded="false" 
+          aria-expanded="true" 
           aria-controls="collapseTwo"
         >
           <i class='fas iconHome'>&#xf70c;</i>
