--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -8,21 +8,19 @@
         <%- include('nav'); %>
         <main class="container mt-5">
             <br><br>
-            <p class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
+            <div class=" container row mt-4 mb-1">
+                <button class="btn btn-primary mr-1" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
                     Exibir Atividades Encerradas
                 </button>
-            </p>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseDemais" aria-expanded="false" aria-controls="collapseDemais">
+                    Exibir Demais Atividades
+                </button>
+            </div>
             <div class="collapse" id="collapseConcluido">
                 <div class="card card-body">
                     <div class="row" id="AtivCompl"></div>
                 </div>
             </div>
-            <p class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseDemais" aria-expanded="false" aria-controls="collapseDemais">
-                    Exibir Demais Atividades
-                </button>
-            </p>
             <div class="collapse" id="collapseDemais">
                 <div class="card card-body">
                     <div class="row" id="Ativ"></div>
