nova função para alterar o status

--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -8,7 +8,7 @@
         <%- include('nav'); %>
         <main class="container mt-5">
             <br><br>
-            <div class=" container row mt-4 mb-1">
+            <div class="container row mt-4 mb-1">
                 <button class="btn btn-primary mr-1" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
                     Exibir Atividades Encerradas
                 </button>
@@ -38,5 +38,6 @@
     <script src="../src/colorirStatus.js" type="text/javascript"></script>
     <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
     <script src="../src/ajustaDataBr.js"></script>
+    <script src="../src/botao_editarStatus.js"></script>
 </html>
 
