--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -9,21 +9,19 @@
         <%- include('nav'); %>
         <main class="container mt-5">
             <br><br>
-            <p class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
+            <div class="container row mt-4 mb-1">
+                <button class="btn btn-primary mr-1" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
                     Exibir Iniciativas Encerradas
                 </button>
-            </p>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseDemais" aria-expanded="false" aria-controls="collapseDemais">
+                    Exibir Demais Iniciativas
+                </button>
+            </div>
             <div class="collapse" id="collapseConcluido">
                 <div class="card card-body">
                     <div class="row" id="IniCompl"></div>
                 </div>
             </div>
-            <p class="mt-4">
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseDemais" aria-expanded="false" aria-controls="collapseDemais">
-                    Exibir Demais Iniciativas
-                </button>
-            </p>
             <div class="collapse" id="collapseDemais">
                 <div class="card card-body">
                     <div class="row" id="Ini"></div>
@@ -40,5 +38,7 @@
     <script src="../src/expandirCard.js" type="text/javascript"></script>
     <script src="../src/colorirStatus.js" type="text/javascript"></script>
     <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
+    <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
+    <script src="../src/botao_editarStatus.js" type="text/javascript"></script>
 </html>
 
