--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -7,16 +7,26 @@
     <body>
         <%- include('nav'); %>
 
-        <main class="container"> 
-
-            <section class="mgresp">
-            
-                <div class="row" id="Obj">
-
+        <main class="container mt-5">
+            <br><br>
+            <div class="container row mt-4 mb-1">
+                <button class="btn btn-primary mr-1" type="button" data-toggle="collapse" data-target="#collapseConcluido" aria-expanded="false" aria-controls="collapseConcluido">
+                    Exibir Objetivos Encerrados
+                </button>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseDemais" aria-expanded="false" aria-controls="collapseDemais">
+                    Exibir Demais Objetivos
+                </button>
+            </div>
+            <div class="collapse" id="collapseConcluido">
+                <div class="card card-body">
+                    <div class="row" id="ObjCompl"></div>
                 </div>
-            
-            </section>
-            
+            </div>
+            <div class="collapse" id="collapseDemais">
+                <div class="card card-body">
+                    <div class="row" id="Obj"></div>
+                </div>
+            </div>
         </main>
         
     </body>
@@ -29,7 +39,7 @@
     <script src="../src/expandirCard.js" type="text/javascript"></script>
     <script src="../src/colorirStatus.js" type="text/javascript"></script>
     <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
-    <script src="../src/titulo.js" type="text/javascript"></script>
-
+    <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
+    <script src="../src/botao_editarStatus.js" type="text/javascript"></script>
 </html>
 
