finalização da edição de items

--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -40,5 +40,6 @@
     <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
     <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
     <script src="../src/botao_editarStatus.js" type="text/javascript"></script>
+    <script src="../src/botao_editarDetalhe.js"></script>
 </html>
 
