--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -39,5 +39,6 @@
     <script src="../src/botao_editarPrazo.js" type="text/javascript"></script>
     <script src="../src/ajustaDataBr.js"></script>
     <script src="../src/botao_editarStatus.js"></script>
+    <script src="../src/botao_editarDetalhe.js"></script>
 </html>
 
