ajuste no link do fontawesome que estava corrompido.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,6 @@
     <head>
         <title>Login - PBSC</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet"  type="text/css" href="../styles/login.css">
     </head>
     <body>
@@ -19,14 +18,14 @@
                     <ul class="list-group list-group-horizontal font-weight-bold">
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/google" class="text-danger text-decoration-none ico">
-                                <i class='fab'  style="font-size: 32px">&#xf1a0;</i>
+                                <i class='fab fa-google'  style="font-size: 29px"></i>
                                 <br>
                                 Google+
                             </a>
                         </li>
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/linkedin" class="text-primary text-decoration-none ico">
-                                <i class='fab' style="font-size: 32px">&#xf08c;</i>
+                                <i class='fab fa-linkedin' style="font-size: 32px"></i>
                                 <br>
                                 LinkedIn
                             </a>
