--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -9,10 +9,13 @@
 <link rel="shortcut icon" href="../img/ico_wh2x2.png">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <link rel="stylesheet" type="text/css" href="../styles/hr.css">
 <link rel="stylesheet" type="text/css" href="../styles/main.css">
 <link rel="stylesheet" type="text/css" href="../styles/login.css">
 <link rel="stylesheet" type="text/css" href="../styles/mainIcon.css">
 <link rel="stylesheet" type="text/css" href="../styles/map.css">
+
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
