tentando corrigir, localhost ok

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
             <div class="container menu">
                 <p class="tit">Login Simplificado</p>
                 <hr>
-                <p>Primeiro acesso? Tanto faz...escolha uma das opções</p>
+                <p>Primeiro acesso? Tanto faz...escolha uma das opções abaixo:</p>
                 <div>
                     <ul class="list-group list-group-horizontal font-weight-bold">
                         <li class="list-group-item list-group-item-action">
