--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
         <title>Login - PBSC</title>
         <%- include('meta'); %>
         <link rel="stylesheet"  type="text/css" href="../styles/login.css">
+        <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     </head>
     <body>
         <div id="esq">
