inclusão dos logos na página de login e remoção do link para acesso via FB

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,23 +19,16 @@
                     <ul class="list-group list-group-horizontal font-weight-bold">
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/google" class="text-danger text-decoration-none ico">
-                                <i class='fab fa-google'  style="font-size: 29px"></i>
+                                <img src="/img/ico_gmail.jpg">
                                 <br>
-                                Google+
+                                Google
                             </a>
                         </li>
                         <li class="list-group-item list-group-item-action">
                             <a href="/auth/linkedin" class="text-primary text-decoration-none ico">
-                                <i class='fab fa-linkedin' style="font-size: 32px"></i>
+                                <img src="/img/ico_linkedin.jpg">
                                 <br>
                                 LinkedIn
-                            </a>
-                        </li>
-                        <li class="list-group-item list-group-item-action">
-                            <a href="#!" onclick="alert('Login via Facebook desabilitado temporariamente')" class="text-dark text-decoration-none ico">
-                                <i class='fab' style="font-size: 32px">&#xf082;</i>
-                                <br>
-                                Facebook
                             </a>
                         </li>
                     </ul>
