correção na página profile para o Accordion ficar expandido

--- a/views/PlanMenu.ejs
+++ b/views/PlanMenu.ejs
@@ -15,7 +15,7 @@
         </h5>
       </div>
   
-      <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+      <div id="collapseOne">
         <div class="card-body">
             <div class="row text-center">
                 <div class="col">
