--- a/views/RunMenu.ejs
+++ b/views/RunMenu.ejs
@@ -13,7 +13,7 @@
         </button>
       </div>
   
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+      <div>
         <div class="card-body">
             <div class="row text-center">
                 <div class="col">
