--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,4 +1,4 @@
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <nav class="navbar navbar-expand-lg navbar-light bgBLK fixed-top text-white container-fluid" id="navbar">    
     <div class="container">
         <div class="navbar-brand order-fisrt">
