teste no ícone como img

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -22,7 +22,7 @@
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white">
                     <p class="align-middle d-inline">
-                        <span class='fas align-middle navico'>&#xf013;</span>
+                        <img src="/img/ico_gear.png" style="height: 24px;">
                         <br>
                         <b>Opções</b>
                     </p>
