teste no ícone como img

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -51,7 +51,7 @@
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white">
                     <p class="align-middle d-inline">
-                        <span class='fas align-middle navico'>&#xf06e;</span>
+                        <img src="/img/ico_eye.jpg" style="height: 24px;">
                         <br>
                         <b>Ver</b>
                     </p>
@@ -74,7 +74,7 @@
             <div class="btn-group mr-2 mb-2 mt-2">
                 <button type="button" class="btn bgBLK text-white text-center">
                     <p class="align-middle d-inline">
-                        <i class='fas align-middle navico'>&#xf6e8;</i>
+                        <img src="/img/ico_hat.jpg" style="height: 24px;">
                         <br>
                         <b>Gravar</b>
                     </p>
